@@ -1,21 +1,13 @@
 package service.jobs;
 
 import builder.*;
-import fixtures.SolutionFixtures;
-
 import org.acme.foodpackaging.domain.*;
-import org.acme.foodpackaging.dto.DelayNoteRequest;
-import org.acme.foodpackaging.dto.oeepev.DelayRow;
-import org.acme.foodpackaging.dto.oeepev.MaintenanceRow;
-import org.acme.foodpackaging.exception.service.ProductNotFoundException;
-import org.acme.foodpackaging.persistence.load.LoadDataService;
-import org.acme.foodpackaging.persistence.upload.UploadDataService;
+
+import org.acme.foodpackaging.dto.row.jobs.JobRow;
+import org.acme.foodpackaging.record.FactKey;
+import org.acme.foodpackaging.record.FactProductionRow;
 import org.acme.foodpackaging.repository.jobs.JobRepository;
-import org.acme.foodpackaging.record.CameraValue;
-import org.acme.foodpackaging.record.DbJobRow;
-import org.acme.foodpackaging.service.jobs.JobInfoService;
-import org.acme.foodpackaging.service.jobs.JobRefreshService;
-import org.acme.foodpackaging.service.jobs.JobService;
+import org.acme.foodpackaging.service.jobs.*;
 import org.acme.foodpackaging.service.lines.LineService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -26,14 +18,14 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDateTime;
 import java.time.Month;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
+import static org.acme.foodpackaging.scheduleoperations.utils.ScheduleUtils.START_FACT_EVENT_TYPE;
+import static org.acme.foodpackaging.scheduleoperations.utils.ScheduleUtils.START_CAMERA_EVENT_TYPE;
+import static org.acme.foodpackaging.scheduleoperations.utils.ScheduleUtils.END_CAMERA_EVENT_TYPE;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.Mockito.*;
 
 /**
@@ -46,302 +38,130 @@ class JobServiceTest {
         @InjectMocks
         JobService jobService;
 
+        @Mock JobRepository jobRepository;
+        @Mock JobListAssembler jobListAssembler;
         @Mock
-        LoadDataService loadDataService;
-        @Mock
-        JobRepository jobRepository;
-        @Mock
-        JobInfoService jobInfoService;
-        @Mock
-        JobRefreshService jobRefreshService;
-        @Mock
-        LineService lineService;
-        @Mock
-        UploadDataService uploadDataService;
+        JobEnrichmentService jobEnrichmentService;
+        @Mock JobRefreshService jobRefreshService;
+        @Mock LineService lineService;
 
         private PackagingSchedule schedule;
         private Job job;
 
         @BeforeEach
         void setUp() {
-
                 LocalDateTime lineStartDateTime = LocalDateTime.of(2025, Month.JANUARY, 15, 8, 0);
-                job = JobTestBuilder.aJob()
-                                .withId("J1")
-                                .build();
+                job = JobTestBuilder.aJob().withId("J1").build();
 
                 schedule = ScheduleTestBuilder.aSchedule()
-                                .withWorkCalendar(
-                                                lineStartDateTime.toLocalDate(),
-                                                lineStartDateTime)
-                                .withLines(
-                                                LineTestBuilder
-                                                                .aLine("L1", lineStartDateTime)
-                                                                .withJobs(job)
-                                                                .build())
-                                .withSpeed("L1", "CLASSIC", 100)
-                                .withEmptyJobs()
-                                .withEmptyJobMap()
-                                .build();
-
-        }
-
-        private Product getTestProduct() {
-                return ProductTestBuilder.aProduct("P1").withType("CLASSIC").build();
-        }
-
-        private DbJobRow getTestDbJobRow() {
-                return DbJobRowBuilder.aRow()
-                                .withSnpz(123L)
-                                .withKmc("P1")
-                                .withLineId("L1").build();
-        }
-
-        private MaintenanceRow getTestMaintenanceRow() {
-                return MaintenanceRowBuilder.aRow()
-                                .withFId(111L)
-                                .withEventTypeId(7)
-                                .withDuration(60)
-                                .withNote("Maintenance note").build();
+                        .withWorkCalendar(lineStartDateTime.toLocalDate(), lineStartDateTime)
+                        .withLines(LineTestBuilder.aLine("L1", lineStartDateTime).withJobs(job).build())
+                        .withSpeed("L1", "CLASSIC", 100)
+                        .withEmptyJobs()
+                        .withEmptyJobMap()
+                        .build();
         }
 
         @Test
-        void buildJobsOnLines_createJobById() {
-                when(loadDataService.getProducts())
-                                .thenReturn(Map.of("P1", getTestProduct()));
+        void buildJobsOnLines_delegatesToAssemblerAndSetsScheduleState() {
+                List<Job> jobs = List.of(job);
+                Map<Long, Job> allJobsById = Map.of(123L, job);
+                List<JobRow> jobRows = List.of(JobRowBuilder.aRow().withSnpz(123L).withKmc("P1").withLineId("L1").build());
 
-                when(jobRepository.getDbJobRowMap(any(), any()))
-                                .thenReturn(Map.of(123L, getTestDbJobRow()));
+                JobListAssembler.JobAssemblyResult result =
+                        new JobListAssembler.JobAssemblyResult(jobs, allJobsById, jobRows);
 
-                when(jobRepository.getMaintenanceData(any(), any()))
-                                .thenReturn(Collections.emptyList());
+                when(jobListAssembler.assemble(schedule)).thenReturn(result);
+                when(jobRepository.getFactProductionRowMap(any(), any())).thenReturn(Map.of());
 
-                when(jobRepository.loadDelayDurationRows(any(), any()))
-                                .thenReturn(Map.of(123L,
-                                                new DelayRow(2L, 123L, "Delay note", 22)));
+                List<JobRow> returned = jobService.buildJobsOnLines(schedule);
 
-                when(jobRepository.loadCleaningDelayDurationRows(any(), any()))
-                                .thenReturn(Map.of(123L,
-                                                new DelayRow(2L, 123L, "Cleaning delay note", 12)));
+                assertEquals(jobRows, returned);
+                assertEquals(jobs, schedule.getJobs());
+                assertEquals(allJobsById, schedule.getAllJobsById());
 
-                when(jobRepository.getDbJobRowMap(any(), any()))
-                                .thenReturn(Map.of(123L, getTestDbJobRow()));
+                verify(jobEnrichmentService).enrichCameraFactsFromPmLog(schedule);
+                verify(jobEnrichmentService).assignIdBatches(schedule);
+                verify(jobRefreshService).refreshStaleCameraEndFromPmLog(schedule);
+                verify(lineService).initLineStartEnd(schedule);
+        }
 
-                when(jobInfoService.generateIdBatch(any(), anyLong())).thenReturn("1212");
-                doNothing().when(jobRefreshService).refreshStaleCameraEndFromPmLog(any());
-                doNothing().when(lineService).initLineStartEnd(any());
+        @Test
+        void buildJobsOnLines_appliesFactProductionData() {
+                job.setProduct(ProductTestBuilder.aProduct("P1").withType("CLASSIC").build());
+                job.setNp(1);
 
-                schedule.getJobs().clear();
-                schedule.getLines().getFirst().getJobs().clear();
+                LocalDateTime dateTime = LocalDateTime.of(2026, Month.AUGUST, 27, 9, 0);
+                JobListAssembler.JobAssemblyResult result =
+                        new JobListAssembler.JobAssemblyResult(List.of(job), Map.of(), List.of());
+                when(jobListAssembler.assemble(schedule)).thenReturn(result);
+
+                FactProductionRow startFact = new FactProductionRow("P1", "343355", dateTime,
+                        233, 10, dateTime, "13344");
+                when(jobRepository.getFactProductionRowMap(any(), any()))
+                        .thenReturn(Map.of(new FactKey("P1", 1, START_FACT_EVENT_TYPE), startFact));
 
                 jobService.buildJobsOnLines(schedule);
-                assertEquals(1, schedule.getJobs().size());
-                assertEquals(1, schedule.getAllJobsById().size());
-                assertEquals(1, schedule.getLines().getFirst().getJobs().size());
-                assertEquals("123", schedule.getJobs().getFirst().getId());
 
-                assertEquals(22, schedule.getJobs().getFirst().getDelayDuration().toMinutes());
-                assertEquals(12, schedule.getJobs().getFirst().getCleaningDelay().toMinutes());
-
-                assertEquals("Delay note", schedule.getJobs().getFirst().getDelayNote());
-                assertEquals("Cleaning delay note", schedule.getJobs().getFirst().getCleaningDelayNote());
+                assertEquals("P1", job.getIdBatch());
         }
 
         @Test
-        void buildJobsOnLines_createMaintenanceJobById() {
+        void buildJobsOnLines_appliesCameraFacts() {
+                job.setProduct(ProductTestBuilder.aProduct("P1").withType("CLASSIC").build());
+                job.setNp(1);
 
-                when(jobRepository.getMaintenanceData(any(), any()))
-                                .thenReturn(List.of(getTestMaintenanceRow()));
+                LocalDateTime cameraStart = LocalDateTime.of(2026, Month.AUGUST, 27, 9, 0);
+                LocalDateTime cameraEnd = LocalDateTime.of(2026, Month.AUGUST, 27, 9, 30);
 
-                when(jobRepository.loadCleaningDelayDurationRows(any(), any()))
-                                .thenReturn(Collections.emptyMap());
+                JobListAssembler.JobAssemblyResult result =
+                        new JobListAssembler.JobAssemblyResult(List.of(job), Map.of(), List.of());
+                when(jobListAssembler.assemble(schedule)).thenReturn(result);
 
-                when(jobRepository.loadCleaningDelayDurationRows(any(), any()))
-                                .thenReturn(Collections.emptyMap());
+                FactProductionRow startCameraFact = new FactProductionRow(
+                        null, "P1", null, 1, START_CAMERA_EVENT_TYPE, cameraStart, null);
+                FactProductionRow endCameraFact = new FactProductionRow(
+                        null, "P1", null, 1, END_CAMERA_EVENT_TYPE, cameraEnd, null);
 
-                when(jobRepository.getDbJobRowMap(any(), any()))
-                                .thenReturn(Collections.emptyMap());
-
-                doNothing().when(jobRefreshService).refreshStaleCameraEndFromPmLog(any());
-                doNothing().when(lineService).initLineStartEnd(any());
-
-                schedule.getJobs().clear();
-                schedule.getLines().getFirst().getJobs().clear();
+                when(jobRepository.getFactProductionRowMap(any(), any()))
+                        .thenReturn(Map.of(
+                                new FactKey("P1", 1, START_CAMERA_EVENT_TYPE), startCameraFact,
+                                new FactKey("P1", 1, END_CAMERA_EVENT_TYPE), endCameraFact
+                        ));
 
                 jobService.buildJobsOnLines(schedule);
-                assertEquals(1, schedule.getJobs().size());
-                assertEquals(1, schedule.getLines().getFirst().getJobs().size());
-                assertEquals(7, schedule.getJobs().getFirst().getMaintenanceTypeId());
-                assertEquals("111", schedule.getJobs().getFirst().getId());
-                assertTrue(schedule.getJobs().getFirst().isMaintenance());
 
-                assertEquals(60, schedule.getJobs().getFirst().getDuration().toMinutes());
-                assertEquals("Maintenance note", schedule.getJobs().getFirst().getMaintenanceNote());
+                assertEquals(cameraStart, job.getCameraStart());
+                assertEquals(cameraEnd, job.getCameraEnd());
         }
 
         @Test
-        void buildJobsOnLines_shouldThrowException_whenProductNotFound() {
+        void buildJobsOnLines_skipsJobsWithoutProduct() {
+                job.setProduct(null);
 
-                DbJobRow jobRow = DbJobRowBuilder.aRow()
-                                .withKmc("UNKNOWN")
-                                .build();
+                JobListAssembler.JobAssemblyResult result =
+                        new JobListAssembler.JobAssemblyResult(List.of(job), Map.of(), List.of());
+                when(jobListAssembler.assemble(schedule)).thenReturn(result);
+                when(jobRepository.getFactProductionRowMap(any(), any())).thenReturn(Map.of());
 
-                when(loadDataService.getProducts())
-                                .thenReturn(Map.of("P1", getTestProduct()));
-
-                when(jobRepository.getDbJobRowMap(any(), any()))
-                                .thenReturn(Map.of(123L, jobRow));
-
-                assertThrows(ProductNotFoundException.class,
-                                () -> jobService.buildJobsOnLines(schedule));
+                assertDoesNotThrow(() -> jobService.buildJobsOnLines(schedule));
+                assertNull(job.getIdBatch());
         }
 
         @Test
-        void writeDelayNote_success() {
+        void buildJobsOnLines_noMatchingFactRows_leavesJobUnchanged() {
+                job.setProduct(ProductTestBuilder.aProduct("P1").withType("CLASSIC").build());
+                job.setNp(1);
 
-                DelayNoteRequest request = new DelayNoteRequest();
-                request.setLineId("L1");
-                request.setIndex(0);
-                request.setDelayNote("Note");
+                JobListAssembler.JobAssemblyResult result =
+                        new JobListAssembler.JobAssemblyResult(List.of(job), Map.of(), List.of());
+                when(jobListAssembler.assemble(schedule)).thenReturn(result);
+                when(jobRepository.getFactProductionRowMap(any(), any())).thenReturn(Map.of());
 
-                jobService.writeDelayNote(request, schedule);
-                assertEquals("Note", job.getDelayNote());
-        }
+                jobService.buildJobsOnLines(schedule);
 
-        @Test
-        void writeCleaningDelayNote_success() {
-
-                schedule.setJobs(List.of());
-                schedule.setAllJobsById(Map.of());
-                DelayNoteRequest request = new DelayNoteRequest();
-                request.setLineId("L1");
-                request.setIndex(0);
-                request.setDelayNote("Cleaning");
-
-                jobService.writeCleaningDelayNote(request, schedule);
-                assertEquals("Cleaning", job.getCleaningDelayNote());
-        }
-
-        @Test
-        void writeDelayNote_whenLineNotFound() {
-
-                Job j1 = JobTestBuilder.aJob().build();
-
-                schedule.getLines().getFirst().setId("L2");
-                DelayNoteRequest request = new DelayNoteRequest();
-                request.setLineId("L1");
-                request.setDelayNote("Note");
-
-                jobService.writeDelayNote(request, schedule);
-
-                assertNull(j1.getDelayNote());
-        }
-
-        @Test
-        void writeDelayNote_whenLineJobsNull() {
-
-                schedule.setAllJobsById(Map.of());
-                schedule.setJobs(List.of());
-                schedule.getLines().getFirst().setJobs(null);
-                DelayNoteRequest request = new DelayNoteRequest();
-                request.setLineId("L1");
-                request.setIndex(0);
-                request.setDelayNote("Note");
-
-                jobService.writeDelayNote(request, schedule);
-
-                assertNull(schedule.getLines().getFirst().getJobs());
-        }
-
-        // ============================================================
-        // enrichCameraFactsFromPmLog
-        // ============================================================
-
-        @Test
-        void enrichCameraFactsFromPmLog_shouldFillCameraStartAndEnd() {
-
-                PackagingSchedule solution = SolutionFixtures.solutionWithLines();
-
-                Job j1 = solution.getJobs().getFirst();
-                j1.setCameraStart(null);
-                j1.setCameraEnd(null);
-                LocalDateTime start = LocalDateTime.of(2026, Month.MAY, 9, 15, 0);
-                LocalDateTime end = LocalDateTime.of(2026, Month.MAY, 9, 16, 0);
-
-                when(jobRepository.getCameraFactRowMap(any()))
-                                .thenReturn(Map.of(
-                                                j1.getIdBatch(),
-                                                new CameraValue(start, end)));
-
-                jobService.enrichCameraFactsFromPmLog(solution);
-
-                assertEquals(start, j1.getCameraStart());
-                assertEquals(end, j1.getCameraEnd());
-
-                verify(uploadDataService).fillMsLogTable(argThat(rows -> rows.size() == 2));
-        }
-
-        @Test
-        void enrichCameraFactsFromPmLog_shouldFillOnlyCameraEnd() {
-
-                PackagingSchedule solution = SolutionFixtures.solutionWithLines();
-
-                Job j1 = solution.getJobs().getFirst();
-
-                LocalDateTime originalStart = LocalDateTime.of(2026, Month.MAY, 9, 10, 0);
-
-                LocalDateTime newEnd = LocalDateTime.of(2026, Month.MAY, 9, 16, 0);
-
-                j1.setCameraStart(originalStart);
-                j1.setCameraEnd(null);
-
-                when(jobRepository.getCameraFactRowMap(any()))
-                                .thenReturn(Map.of(
-                                                j1.getIdBatch(),
-                                                new CameraValue(
-                                                                LocalDateTime.of(2026, Month.MAY, 9, 15, 0),
-                                                                newEnd)));
-
-                jobService.enrichCameraFactsFromPmLog(solution);
-
-                assertEquals(originalStart, j1.getCameraStart());
-                assertEquals(newEnd, j1.getCameraEnd());
-
-                verify(uploadDataService).fillMsLogTable(argThat(rows -> rows.size() == 1));
-        }
-
-        @Test
-        void enrichCameraFactsFromPmLog_shouldSkipWhenCameraNotFound() {
-
-                PackagingSchedule solution = SolutionFixtures.solutionWithLines();
-
-                Job j1 = solution.getJobs().getFirst();
-                j1.setCameraStart(null);
-                j1.setCameraEnd(null);
-
-                when(jobRepository.getCameraFactRowMap(any()))
-                                .thenReturn(Collections.emptyMap());
-
-                jobService.enrichCameraFactsFromPmLog(solution);
-
-                assertNull(j1.getCameraStart());
-                assertNull(j1.getCameraEnd());
-
-                verify(uploadDataService, never())
-                                .fillMsLogTable(any());
-        }
-
-        @Test
-        void enrichCameraFactsFromPmLog_shouldReturnWhenAllJobsHaveCamera() {
-
-                PackagingSchedule solution = SolutionFixtures.solutionWithLines();
-
-                jobService.enrichCameraFactsFromPmLog(solution);
-
-                verify(jobRepository, never())
-                                .getCameraFactRowMap(any());
-
-                verify(uploadDataService, never())
-                                .fillMsLogTable(any());
+                assertNull(job.getIdBatch());
+                assertNull(job.getCameraStart());
+                assertNull(job.getCameraEnd());
         }
 }
